# HW_6_WEB

./: main.py  pyproject.toml  select-1.sql  select-10.sql  select-2.sql  select-3.sql  select-4.sql  select-5.sql  select-6.sql  select-7.sql  select-8.sql  select-9.sql
